CRUD com Scaffolding.

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-8c5b21c8-4e05-4d6d-961c-f0f81b206b20;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
